Adjusted header padding to avoid body headlines being cut off.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -288,6 +288,12 @@ input[name='q']::placeholder {
     }
 
     .header-container {
+        padding-top: 204px;
+    }
+}
+
+@media (min-width: 1255px) {
+    .header-container {
         padding-top: 164px;
     }
 }
